@@ -1,0 +1,10 @@
+config BR2_PACKAGE_NTFSPROGS
+	bool "ntfsprogs"
+	depends on BR2_USE_WCHAR
+	help
+	  wide collection of NTFS utilities
+
+	  http://www.linux-ntfs.org/
+
+comment "ntfsprogs requires a toolchain with WCHAR support"
+	depends on !BR2_USE_WCHAR
