@@ -19,6 +19,7 @@
 	#171: xorg-server / kernel headers 2.6.26 - vm86.c compilation issue
 	#241: device mapper + lvm2: build together
 	#243: ctorrent: new package
+	#247: ntfsprogs: new package
 	#271: Library 'libgcc_s.so.1' not installed in search path
 	#287: New package libnl
 	#331: Update MPlayer to version 1.0rc2
